updating language file
git-svn-id: https://plugins.svn.wordpress.org/wp-catalogue/trunk@764644 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/languages/wp-catalogue-default.po
+++ b/languages/wp-catalogue-default.po
@@ -10,7 +10,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "PO-Revision-Date: 2013-08-30 16:05+0800\n"
 "Last-Translator: Maeve Lander <maeve@enigmaplugins.com>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
+"Language-Team: Enigma Plugins\n"
 "X-Generator: Poedit 1.5.7\n"
 
 #: products/order.php:38
