Updating language files
git-svn-id: https://plugins.svn.wordpress.org/wp-catalogue/trunk@850975 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/languages/wpc-bg_BG.po
+++ b/languages/wpc-bg_BG.po
@@ -8,8 +8,8 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"PO-Revision-Date: 2013-10-04 11:06+0200\n"
-"Last-Translator: georgi <georgi.mollov@gmail.com>\n"
+"PO-Revision-Date: 2014-02-04 10:49+0800\n"
+"Last-Translator: Georgie <georgi.mollov@gmail.com>\n"
 "Language-Team: Enigma Plugins\n"
 "X-Generator: Poedit 1.5.7\n"
 
