--- a/languages/wpc-zh_CN.po
+++ b/languages/wpc-zh_CN.po
@@ -8,9 +8,9 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"PO-Revision-Date: 2013-11-27 10:48+0800\n"
-"Last-Translator: L.H. <leon.huang@msn.com>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
+"PO-Revision-Date: 2014-02-04 10:46+0800\n"
+"Last-Translator: Jingcong Li <malsony@msn.com>\n"
+"Language-Team: \n"
 "X-Generator: Poedit 1.5.7\n"
 
 #: products/order.php:38
@@ -38,13 +38,13 @@ msgstr "拖放项目进行产品排序"
 
 #: products/order.php:353 settings.php:100
 msgid "Help Improve This Plugin!"
-msgstr "和我们一起改善这个插件吧！"
+msgstr "帮助我们改善这个插件吧！"
 
 #: products/order.php:357
 msgid ""
 "Enjoyed this plugin? All donations are used to improve and further develop "
 "this plugin. Thanks for your contributaion."
-msgstr "喜欢这个插件？您的捐献可以用来更好地提升它哦。期待您的支持！"
+msgstr "喜欢本插件吗？所有捐献都会用于本插件日后的完善和提升，谢谢您的支持！"
 
 #: products/order.php:368 settings.php:115
 msgid "you can also help by"
@@ -52,7 +52,7 @@ msgstr "您也可以通过以下方式支持我们："
 
 #: products/order.php:368 settings.php:115
 msgid "rating this plugin on wordpress.org"
-msgstr "到wordpress.org为本插件评分"
+msgstr "在wordpress.org网站为本插件评分"
 
 #: products/order.php:378
 msgid "If you are having problems with plugin please talk about them on "
@@ -64,15 +64,15 @@ msgstr "设置保存成功"
 
 #: products/order.php:412
 msgid "An error occured, order has not been saved."
-msgstr "发生错误，设置没有成功保存"
+msgstr "发生错误，设置未保存"
 
 #: products/sort-categories.php:54 products/sort-products.php:53
 msgid "Drag and drop items to set the custom order."
-msgstr "拖放项目进行您个性化的排序吧"
+msgstr "拖放项目进行个性化排序"
 
 #: products/wpc-product.php:9 products/wpc-product.php:10
 msgid "WP Catalogue"
-msgstr "WP产品图册"
+msgstr "WP Catalogue"
 
 #: products/wpc-product.php:11 products/wpc-product.php:12
 #: products/wpc-product.php:14
@@ -81,7 +81,7 @@ msgstr "添加产品"
 
 #: products/wpc-product.php:13
 msgid "Edit Product"
-msgstr " 编辑产品"
+msgstr "编辑产品"
 
 #: products/wpc-product.php:15
 msgid "View Product"
@@ -89,7 +89,7 @@ msgstr "预览产品"
 
 #: products/wpc-product.php:16
 msgid "Search WPC Product"
-msgstr "在WPC产品中搜索"
+msgstr "搜索WPC产品"
 
 #: products/wpc-product.php:17
 msgid "No Product found"
@@ -178,37 +178,37 @@ msgid ""
 "Adjust the basic presentation of your product catalogue here. It is "
 "important to set this up before you start uploading products so the plugin "
 "knows what size to generate thumbnails and product images"
-msgstr "您可以在此进行产品目录的基本设置（很重要哦）。"
+msgstr "在这里调整产品目录的基本展示方式。预先设置好图像缩略图的尺寸很重要。"
 
 #: settings.php:15
 msgid ""
 "You can further customise the design of your product catalogue in your theme "
 "css."
-msgstr "您可以在网站模板的CSS中进一步个性化您的产品目录。"
+msgstr "您可以在主题的CSS中进一步个性化您的产品目录。"
 
 #: settings.php:21
 msgid "Grid Rows"
-msgstr "网格化排列"
+msgstr "每行显示产品数量"
 
 #: settings.php:33
 msgid "products per row"
-msgstr "每行可容纳的产品"
+msgstr "款"
 
 #: settings.php:38
 msgid "Choose Theme Color"
-msgstr "选择模版颜色"
+msgstr "选择主题颜色"
 
 #: settings.php:42
 msgid "Pagination"
-msgstr "页数"
+msgstr "每页显示产品数量"
 
 #: settings.php:44
 msgid "products per page (use 0 for unlimited)"
-msgstr "每页容纳产品数 （0代表无限制）"
+msgstr "款 （0代表无限制）"
 
 #: settings.php:47
 msgid "Gallery Image"
-msgstr "图库图片"
+msgstr "大图尺寸"
 
 #: settings.php:49 settings.php:60
 msgid "Height"
@@ -220,7 +220,7 @@ msgstr "宽度"
 
 #: settings.php:58
 msgid "Thumbnail"
-msgstr "缩略图"
+msgstr "缩略图尺寸"
 
 #: settings.php:64
 msgid "Scale & Crop"
@@ -236,27 +236,27 @@ msgstr "显示下一个/前一个产品"
 
 #: settings.php:77
 msgid "Inner Template Header"
-msgstr "内部模版标头"
+msgstr "内页模版标头"
 
 #: settings.php:79
 msgid ""
 "Use this area to add your theme layout divs if you are having problems with "
 "inner pages of the catalogue."
-msgstr "如果您遇到产品目录内页问题，请在此处添加divs标签"
+msgstr "如果你对WP Catalogue的目录内页div布局不满意，请在在本栏内添加代码。"
 
 #: settings.php:82
 msgid "Inner Template Footer"
-msgstr "内部模版脚本"
+msgstr "内页模版标尾"
 
 #: settings.php:84
 msgid "Use this area to close the open divs after the WP Catalogue."
-msgstr "在此处关闭"
+msgstr "在WP Catalogue后面尚未结束的div，请在此本栏内输入标尾。"
 
 #: settings.php:104
 msgid ""
 "Enjoyed this plugin? All donations are used to improve and further develop "
 "this plugin. Thanks for your contribution."
-msgstr "喜欢这个插件？您的捐献可以用来更好地提升它哦。期待您的支持！"
+msgstr "喜欢本插件吗？所有捐献都会用于本插件日后的完善和提升，谢谢您的支持！"
 
 #: settings.php:121
 msgid "Need Support?"
@@ -264,7 +264,7 @@ msgstr "需要支持？"
 
 #: settings.php:125
 msgid "Check out the"
-msgstr "请看："
+msgstr "请阅读"
 
 #: settings.php:125
 msgid "and"
