--- a/languages/wpc-fr_FR.po
+++ b/languages/wpc-fr_FR.po
@@ -1,17 +1,21 @@
-# Copyright (C) 2013 
+# Copyright (C) 2013
 # This file is distributed under the same license as the  package.
 msgid ""
 msgstr ""
-"Project-Id-Version: \n"
+"Project-Id-Version: Wp-Catalogue\n"
 "Report-Msgid-Bugs-To: http://wordpress.org/tag/wp-catalogue\n"
 "POT-Creation-Date: 2013-08-30 07:47:30+00:00\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"PO-Revision-Date: 2014-02-04 10:48+0800\n"
-"Last-Translator: Laurine Peyrard <peyrardlaurine@gmail.com>\n"
+"PO-Revision-Date: 2014-05-16 17:16+0100\n"
+"Last-Translator: Wizioo <contact@wizioo.fr>\n"
 "Language-Team: Laurine Peyrard\n"
-"X-Generator: Poedit 1.5.7\n"
+"X-Generator: Poedit 1.6.5\n"
+"Language: fr_FR\n"
+"X-Poedit-Basepath: .\n"
+"X-Poedit-SourceCharset: UTF-8\n"
+"X-Poedit-SearchPath-0: ..\n"
 
 #: products/order.php:38
 msgid "Custom Taxonomy Order settings "
@@ -286,3 +290,16 @@ msgstr "et"
 #: settings.php:125
 msgid "Support Forums"
 msgstr "Les forums d'aide"
+
+#: wpc-catalogue.php:69 wpc-catalogue.php:75
+#: themefiles/single-wpcproduct.php:21 themefiles/single-wpcproduct.php:48
+msgid "All Products"
+msgstr "Tous les produits"
+
+#: themefiles/single-wpcproduct.php:107
+msgid "Product Details"
+msgstr "Détails du produit"
+
+#: themefiles/single-wpcproduct.php:107
+msgid "Price:"
+msgstr "Prix :"
